-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Blocker
-
Resolution: Fixed
-
Affects Version/s: 10.2.2, 10.2.3, 10.2.4, 10.2.5, 10.3.0, 10.2.6
-
Component/s: Storage Engine - InnoDB
-
Labels:None
-
Environment:Windows Server 2012 R2
Here's the information MariaDB logged on the crash, hope it helps
mysqld got exception 0xc0000005 ;
|
This could be because you hit a bug. It is also possible that this binary
|
or one of the libraries it was linked against is corrupt, improperly built,
|
or misconfigured. This error can also be caused by malfunctioning hardware.
|
|
To report this bug, see https://mariadb.com/kb/en/reporting-bugs
|
|
We will try our best to scrape up some info that will hopefully help
|
diagnose the problem, but since we have already crashed,
|
something is definitely wrong and this may fail.
|
|
Server version: 10.2.6-MariaDB-log
|
key_buffer_size=209715200
|
read_buffer_size=2097152
|
max_used_connections=70
|
max_threads=2050
|
thread_count=77
|
It is possible that mysqld could use up to
|
key_buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 254546 K bytes of memory
|
Hope that's ok; if not, decrease some variables in the equation.
|
|
Thread pointer: 0x68ea3e7e58
|
Attempting backtrace. You can use the following information to find out
|
where mysqld died. If you see no messages after this, something went
|
terribly wrong...
|
mysqld.exe!std::_Tree<std::_Tset_traits<dict_foreign_t * __ptr64,dict_foreign_compare,ut_allocator<dict_foreign_t * __ptr64>,0> >::_Copy_nodes<std::_Tree<std::_Tset_traits<dict_foreign_t * __ptr64,dict_foreign_compare,ut_allocator<dict_foreign_t * __ptr64>,0> >::_Copy_tag>()[xtree:1962]
|
mysqld.exe!std::_Tree<std::_Tset_traits<dict_foreign_t * __ptr64,dict_foreign_compare,ut_allocator<dict_foreign_t * __ptr64>,0> >::_Copy<std::_Tree<std::_Tset_traits<dict_foreign_t * __ptr64,dict_foreign_compare,ut_allocator<dict_foreign_t * __ptr64>,0> >::_Copy_tag>()[xtree:1921]
|
mysqld.exe!std::_Tree<std::_Tset_traits<dict_foreign_t * __ptr64,dict_foreign_compare,ut_allocator<dict_foreign_t * __ptr64>,0> >::_Tree<std::_Tset_traits<dict_foreign_t * __ptr64,dict_foreign_compare,ut_allocator<dict_foreign_t * __ptr64>,0> ><std::_Wrap_alloc<ut_allocator<std::_Tree_node<dict_foreign_t * __ptr64,void * __ptr64> > > >()[xtree:1018]
|
mysqld.exe!dict_mem_table_free_foreign_vcol_set()[dict0mem.cc:927]
|
mysqld.exe!dict_mem_table_free()[dict0mem.cc:191]
|
mysqld.exe!i_s_sys_tables_fill_table()[i_s.cc:6155]
|
mysqld.exe!get_schema_tables_result()[sql_show.cc:8262]
|
mysqld.exe!JOIN::exec_inner()[sql_select.cc:3434]
|
mysqld.exe!JOIN::exec()[sql_select.cc:3274]
|
mysqld.exe!mysql_select()[sql_select.cc:3668]
|
mysqld.exe!handle_select()[sql_select.cc:361]
|
mysqld.exe!execute_sqlcom_select()[sql_parse.cc:6431]
|
mysqld.exe!mysql_execute_command()[sql_parse.cc:3448]
|
mysqld.exe!mysql_parse()[sql_parse.cc:7879]
|
mysqld.exe!dispatch_command()[sql_parse.cc:1814]
|
mysqld.exe!do_command()[sql_parse.cc:1361]
|
mysqld.exe!do_handle_one_connection()[sql_connect.cc:1354]
|
mysqld.exe!handle_one_connection()[sql_connect.cc:1262]
|
mysqld.exe!pthread_start()[my_winthread.c:62]
|
mysqld.exe!thread_start<unsigned int (__cdecl*)(void * __ptr64)>()[thread.cpp:115]
|
KERNEL32.DLL!BaseThreadInitThunk()
|
ntdll.dll!RtlUserThreadStart()
|
|
Trying to get some variables.
|
Some pointers may be invalid and cause the dump to abort.
|
Query (0x68ea329030): SELECT * FROM `information_schema`.`INNODB_SYS_TABLES` LIMIT 500
|
Connection ID (thread ID): 158
|
Status: NOT_KILLED
|
|
- relates to
-
MDEV-13015 After restart, InnoDB wrongly thinks that a SEQUENCE is a TABLE
-
- Closed
-
-
MDEV-12309 Test migration from MySQL 5.7 with named tablespaces to MariaDB 10.2
-
- Stalled
-