MDEV-12873 preparation for 10.2 (work in progress)

DICT_TF2_BITS: Shrink to the correct value of 7.

Remove the SHARED_SPACE flag, and shift the SYS_TABLES.TYPE
flags back to where they were before MariaDB 10.2.2.
FIXME: Ensure reasonable compatibility with MariaDB 10.2.2‥10.2.6
(CREATE TABLE…PAGE_COMPRESSED…PAGE_COMPRESSION) and MySQL 5.7
(CREATE TABLE…TABLESPACE) after this.